cards overflow fixed

--- a/client/src/components/mypapers/mypapers.css
+++ b/client/src/components/mypapers/mypapers.css
@@ -12,7 +12,6 @@
 
 .mypapers_papers {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 300px);
   gap: 25px;
   margin-top: 20px;
   width: 100%;
